--- a/extensions/.registry/3b80b125-4f65-4a6f-96c6-4ede2ed9f506/package.json
+++ b/extensions/.registry/3b80b125-4f65-4a6f-96c6-4ede2ed9f506/package.json
@@ -1,19 +1,19 @@
 {
-	"name": "directus-extension-endpoint-pokeapi",
-	"description": "Please enter a description for your extension",
+	"name": "@directus-labs/simple-list-interface",
+	"description": "Input a simple list of items with full keyboard support.",
 	"icon": "extension",
 	"version": "1.0.0",
 	"keywords": [
 		"directus",
 		"directus-extension",
-		"directus-extension-endpoint"
+		"directus-extension-interface"
 	],
 	"type": "module",
 	"files": [
 		"dist"
 	],
 	"directus:extension": {
-		"type": "endpoint",
+		"type": "interface",
 		"path": "dist/index.js",
 		"source": "src/index.ts",
 		"host": "^10.10.0"
@@ -24,8 +24,12 @@
 		"link": "directus-extension link"
 	},
 	"devDependencies": {
-		"@directus/extensions-sdk": "12.0.2",
-		"@types/node": "^22.5.4",
-		"typescript": "^5.6.2"
+		"@directus/extensions-sdk": "11.0.9",
+		"typescript": "^5.5.4",
+		"vue": "^3.4.35"
+	},
+	"dependencies": {
+		"vue-i18n": "^9.13.1",
+		"vuedraggable": "4.1.0"
 	}
 }
