--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       start_interval: 5s
       start_period: 30s
     ports:
-      - 5432:5432
+      - 54329:5432
 
   cache:
     image: redis:6
@@ -89,6 +89,12 @@ services:
       WEBSOCKETS_ENABLED: "true"
       EXTENSIONS_AUTO_RELOAD: "true"
 
-      # Make sure to set this in production
-      # (see https://docs.directus.io/self-hosted/config-options#general)
-      # PUBLIC_URL: "https://directus.example.com"
+      EMAIL_FROM: ${EMAIL_FROM}
+      EMAIL_MAILGUN_API_KEY: ${EMAIL_MAILGUN_API_KEY}
+      EMAIL_MAILGUN_DOMAIN: ${EMAIL_MAILGUN_DOMAIN}
+      EMAIL_TEMPLATES_PATH: ${EMAIL_TEMPLATES_PATH}
+      EMAIL_TRANSPORT: ${EMAIL_TRANSPORT}
+
+  # Make sure to set this in production
+  # (see https://docs.directus.io/self-hosted/config-options#general)
+  # PUBLIC_URL: "https://directus.example.com"
